# open-gym-backend

./: .gitignore  .pre-commit-config.yaml  README.md  createsuperuser.sh  docker-compose.yml  poetry.toml  pyproject.toml
.github/: pull_request_template.md
app/: .env  main.py
app/config/: environments.py
app/core/: tags.py
app/core/schemas/: responses.py
docs/: MIGRATIONS.md  STRUCTURE.md
src/: .env  alembic.ini  main.py
src/auth/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  utils.py
src/auth/services/: repository.py  services.py
src/config/: environments.py  settings.py
src/core/: responses.py  tags.py
src/core/exceptions/: exceptions.py  handler.py
src/core/schemas/: responses.py
src/database/: base.py  env.py  models.py  repository.py  script.py.mako  session.py
src/database/versions/: d992560b8802_feat_add_user_table_model.py
src/user/: exceptions.py
src/user/models/: __init__.py  general.py
src/user/routers/: general.py
src/user/schemas/: general.py  requests.py
src/user/services/: general.py  repository.py
