[tool.poetry]
name = "open-gym-backend"
version = "0.0.0"
description = "Open Gym Backend"
authors = ["Izcar J. Muñoz Torrez <izcarmt95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
pre-commit = "^3.6.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[tool.poetry.group.linter.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict=true
mypy_path = "$MYPY_CONFIG_FILE_DIR/app"
plugins = ["pydantic.mypy"]
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true


[tool.ruff]
line-length = 100
fixable = ["F401", "ALL"]
unfixable = []
[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
